...
  "username": "Username",
  "password": "Password",
  "login": "Login",
  "noAccount": "Don't have an account? Sign Up",
  "createAccount": "Create Account",
  "joinSecure": "Join the secure messenger",
  "signUp": "Sign Up",
  "alreadyHaveAccount": "Already have an account? Login",
  "e2eEncryptionOn": "End-to-End Encryption is ON",
  "messageTones": "Message tones, vibration",
  "chooseTheme": "Choose your theme",
  "system": "System",
  "light": "Light",
...
